j.son server configuration, fix css character name overflow(monkey)

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ html, body {
 #character-bar span {
   padding: 1%;
   height: 80%;
-  width: 8vw;
+  width: 12vw;
   display: flex;
   justify-content: center;
   font-size: 3vh;
